changed the header to two flexboxs for alignment due to some weird issues with grid

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,11 @@
 
 main {
     display: grid;
-    grid-template-columns: 1fr 4fr;
+    grid-template-columns: 1fr 6fr;
+}
+
+p {
+    color: rgb(83, 83, 83);
 }
 
 .sidebar {
@@ -38,45 +42,63 @@ main {
 }
 
 .header-container {
-    grid-column-start: 2;
-    grid-column-end: 3;
+    padding-left: 25px;
     display: flex;
     flex-direction: column;
+    width: 100%;
 }
 
 .header-search-row {
     display: flex;
     flex-direction: row;
-    padding-left: 50px;
+    width: 100%;
+    padding: 10px;
+}
+
+.search-bar-container {
+    width: 75%;
+}
+
+.active-user-container {
+    width: 25%;
 }
 
 .header-content-row {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    height: 100%;
+    width: 100%;
+    padding: 10px;
+}
+
+input[type="search"] {
+    border: none;
+    background-color: rgb(222, 229, 238);
+    border-radius: 15px;
+    padding-left: 10px;
+    width: 75%;
+    height: 2em;
+    padding-right: 5px;
 }
 
 .user-greeting-div {
     display: flex;
     flex-direction: column;
-    margin-left: 50px;
-    width: 25%;
+    justify-content: center;
+    align-items: flex-start;
+    width: 66%;
 }
 
 .button-container {
-    grid-template-columns: 2fr 1fr;
+    width: 34%;
     display: flex;
-    justify-content: space-between;
-    margin-right: 50px;
-    width: 25%;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 .button-container button {
     width: 75px;
-    height: 40px;
-    border-radius: 7px;
+    height: 30px;
+    border-radius: 15px;
     border: none;
     background-color: rgb(24, 135, 206);
     color: white;
@@ -97,20 +119,29 @@ main {
     align-items: center;
 }
 
-
-
 .card-container {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(25px, 300px));
+    /* grid-template-columns: repeat(auto-fill, clamp(100px, 30%, 300px)); */
+    grid-template-columns: 1fr 1fr;
     grid-column-start: 1;
     grid-column-end: 2;
+    padding-right: 25px;
     gap: 25px;
 }
 
 .project-card {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
     width: 100%;
     height: 100%;
     border-left: 4px solid rgb(241, 197, 21);
+    padding: 20px;
+}
+
+.project-card h3 {
+    padding-bottom: 5px;
 }
 
 .sidebar-card {
@@ -135,12 +166,13 @@ main {
     box-shadow: 2px 2px 5px gray;
 }
 
-.trending-user, .announcement-section {
-    padding: 10px;
+.trending-user {
+    padding: 20px;
 }
 
 .announcements {
     margin-bottom: 15px;
+    padding: 20px;
 }
 
 .announcement-section p {
